--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,22 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
+        <a href="./index.html">Головна</a>
       </li>
-
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
+        <a href="./page-3.html" class="nav-link">Навантаження</a>
+      </li>
+      <li class="nav-item">
+        <a href="./page-3.html" class="nav-link">Дипломне проєктування</a>
+      </li>
+      <li class="nav-item">
+        <a href="./page-3.html" class="nav-link">Моя група</a>
+      </li>
+      <li class="nav-item">
+        <a href="./page-3.html" class="nav-link">Галерея</a>
+      </li>
+      <li class="nav-item">
+        <a href="./page-3.html" class="nav-link">Контакти</a>
       </li>
     </ul>
   </nav>
