--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <a href="./index.html">Головна</a>
       </li>
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Навантаження</a>
+        <a href="./page-3.html" class="nav-link">Навчальні програми</a>
       </li>
       <li class="nav-item">
         <a href="./page-3.html" class="nav-link">Дипломне проєктування</a>
@@ -17,7 +17,7 @@
         <a href="./page-3.html" class="nav-link">Галерея</a>
       </li>
       <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Контакти</a>
+        <a href="./contacts.html" class="nav-link">Контакти</a>
       </li>
     </ul>
   </nav>
