--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,8 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./contacts.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
