--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,9 +5,10 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+@import url('./base.css');
 @import url('./header.css');
 @import url('./contacts.css');
+@import url('./work-together.css');
 
 
 :root {
